separando por div el resto de las imagenes

--- a/categoria.html
+++ b/categoria.html
@@ -66,57 +66,85 @@
                         </div>
                     </div>
                 </div>
-                    
-                                <img src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
-                                <div class="productorosa">
-                                    <h3 class="texto_info">
-                                        Ramo de tulipanes
-                                    </h3>
-                                    <h4 class="precio">$3.000</h4>
-                                <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
-                                <div class="productorosa">
-                                    <h3 class="texto_info">
-                                        Ramo de tulipanes
-                                    </h3>
-                                    <h4 class="precio">$3.000</h4>
-                                <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />
-                                <div class="productorosa">
-                                    <h3 class="texto_info">
-                                        Ramo de orquidea
-                                    </h3>
-                                    <h4 class="precio">$6.000</h4>
-                                <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
-                                <div class="productorosa">
-                                    <h3 class="texto_info">
-                                        Ramo de orquidea
-                                    </h3>
-                                    <h4 class="precio">$6.000</h4>
-                                <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Mancha" title="Orquidea Manchada" width="100" height="120" />
-                                <div class="productorosa">
-                                    <h3 class="texto_info">
-                                        Ramo de orquidea
-                                    </h3>
-                                    <h4 class="precio">$6.500</h4>
-                                <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
-                                <div class="productorosa">
-                                    <h3 class="texto_info">
-                                        Ramo de Gualdas
-                                    </h3>
-                                    <h4 class="precio">$2.500</h4>
-                                <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
-                                <div class="productorosa">
-                                    <h3 class="texto_info">
-                                        Ramo de Jazmines
-                                    </h3>
-                                    <h4 class="precio">$6.000</h4>
-
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">
+                        <img src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
+                        <div class="productorosa">
+                            <h3 class="texto_info">
+                                Ramo de tulipanes
+                            </h3>
+                            <h4 class="precio">$3.000</h4>
+                        </div>
+                    </div>
+                </div>        
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">
+                        <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
+                        <div class="productorosa">
+                            <h3 class="texto_info">
+                                Ramo de tulipanes
+                            </h3>
+                            <h4 class="precio">$3.000</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">        
+                        <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />
+                        <div class="productorosa">
+                            <h3 class="texto_info">
+                                Ramo de orquidea
+                            </h3>
+                            <h4 class="precio">$6.000</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">        
+                        <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
+                            <div class="productorosa">
+                                <h3 class="texto_info">
+                                    Ramo de orquidea
+                                </h3>
+                                <h4 class="precio">$6.000</h4>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">
+                        <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Mancha" title="Orquidea Manchada" width="100" height="120" />
+                        <div class="productorosa">
+                            <h3 class="texto_info">
+                                Ramo de orquidea
+                            </h3>
+                            <h4 class="precio">$6.500</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">        
+                        <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
+                        <div class="productorosa">
+                            <h3 class="texto_info">
+                                Ramo de Gualdas
+                            </h3>
+                            <h4 class="precio">$2.500</h4>
+                        </div>
+                    </div>
+                </div>  
+                <div class="col-md-4 col-sm-6 col-mb-4">
+                    <div class="productos">      
+                        <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
+                        <div class="productorosa">
+                            <h3 class="texto_info">
+                                Ramo de Jazmines
+                            </h3>
+                            <h4 class="precio">$6.000</h4>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-     </section>
-
-     
-
+  </section>
 </body>
+</html>
