añadiendo inputs de sumbit y reset

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -20,7 +20,7 @@
         <div id="flores">
             <h2>Puede elegir hasta 3 tipos de flores</h2>
             <div id="flor1">
-                <p>Flor 1</p>
+                <a>Flor 1</a>
 
                 <label for="cant1">Cantidad:</label>
                 <select name="cant1" id="cant1">
@@ -57,7 +57,7 @@
                 </select>
             </div>
             <div id="flor2">
-                <p>Flor 2</p>
+                <a>Flor 2</a>
 
                 <label for="cant2">Cantidad:</label>
                 <select name="cant2" id="cant2">
@@ -95,7 +95,7 @@
                 </select>
             </div>
             <div id="flor3">
-                <p>Flor 3</p>
+                <a>Flor 3</a>
 
                 <label for="cant3">Cantidad:</label>
                 <select name="cant3" id="cant3">
@@ -145,13 +145,18 @@
             <!--añadir   resize: none; para que no cambie de tamaño-->
 
             <div id="persCarta">
-                <p>Tipo de letra:</p>
+                <a>Tipo de letra:</a>
                 <label for="cursiva">Cursiva</label>
                 <input type="radio" name="tLetra" id="cursiva" value="cursiva">
                 <label for="imprenta">Imprenta</label>
                 <input type="radio" name="tLetra" id="imprenta" value="imprenta">
             </div>
         </div>
+    </section>
+
+    <section id="botonF">
+			<input type="submit" name="enviar" value="enviar" />
+			<input type="reset" name="borrar" value="borrar" />
     </section>
     
 
