--- a/categoria.html
+++ b/categoria.html
@@ -33,7 +33,7 @@
             </div>
             <!--productos grid-->
             <div class="img">
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">
                         <img src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120">
                         <div class="productorosa">
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                 </div>        
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">
                         <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120">
                         <div class="productorosa">
@@ -55,7 +55,7 @@
                         </div>
                     </div>    
                 </div>
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">
                         <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
                         <div class="productorosa">
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">
                         <img src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
                         <div class="productorosa">
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>        
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">
                         <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
                         <div class="productorosa">
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">        
                         <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />
                         <div class="productorosa">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">        
                         <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
                             <div class="productorosa">
@@ -110,7 +110,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">
                         <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Mancha" title="Orquidea Manchada" width="100" height="120" />
                         <div class="productorosa">
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">        
                         <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
                         <div class="productorosa">
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </div>  
-                <div class="col-md-4 col-sm-6 col-mb-4">
+                <div class="ramo">
                     <div class="productos">      
                         <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
                         <div class="productorosa">
