modificacion de colores y la fuente de los titulos

--- a/categoria.html
+++ b/categoria.html
@@ -29,7 +29,7 @@
         <div class="img_inicio">
             <div id="titulo">
                 <h1>¡Personalizá el ramo de tus sueños!</h1>
-                <h2> Vea parte de nuestro catalogo:</h2>
+                <h2> Vea parte de nuestro catálogo:</h2>
             </div>
             <!--productos grid-->
             <div class="img">
