Cambiando etiquetas h3 y h4 por etiquetas p

--- a/categoria.html
+++ b/categoria.html
@@ -33,113 +33,93 @@
             </div>
             <!--productos grid-->
             <div class="img">
-                <div class="ramo">
-                    <div class="productos">
-                        <img src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120">
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de rosa
-                            </h3>
-                            <h4 class="precio">$2.000</h4>
-                        </div>
-                    </div>
-                </div>        
-                <div class="ramo">
-                    <div class="productos">
-                        <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120">
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de rosa 
-                            </h3>
-                            <h4 class="precio">$2.000</h4>
-                        </div>
-                    </div>    
+                <div class="productos">
+                    <img src="imagenes/rosaAzul1.png" title="Rosa azul" width="100" height="120">
                 </div>
-                <div class="ramo">
+                <div class="texto-info">
+                    <p>Rosa azul</p>
+                    <p>$2.000</p>
+                </div>
+            </div>   
+            <div class="img">     
+                <div class="productos">
+                    <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120">
+                </div>
+                    <div class="texto-info">
+                        <p>Ramo de rosa</p> 
+                        <p>$2.000</p>
+                    </div>
+            </div>   
+                <div class="img">
                     <div class="productos">
                         <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de rosa
-                            </h3>
-                            <h4 class="precio">$3.000</h4>
-                        </div>
                     </div>
+                        <div class="texto_info">
+                            <p>Ramo de rosa</p>
+                            <p>$3.000</p>
+                        </div>
                 </div>
+
                 <div class="ramo">
                     <div class="productos">
-                        <img src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de tulipanes
-                            </h3>
-                            <h4 class="precio">$3.000</h4>
+                        <img src="imagenes/tulipanAmarillo1.jpg" title="Tulipan amarillo" width="100" height="120" />
+                            <div class="texto_info">
+                                <p>Ramo de tulipanes</p>
+                            <p>$3.000</p>
                         </div>
                     </div>
                 </div>        
                 <div class="ramo">
                     <div class="productos">
                         <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de tulipanes
-                            </h3>
-                            <h4 class="precio">$3.000</h4>
+                        <div class="texto_info">
+                                <p>Ramo de tulipanes</p>
+                            <p>$3.000<p>
                         </div>
                     </div>
                 </div>
                 <div class="ramo">
                     <div class="productos">        
                         <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de orquidea
-                            </h3>
-                            <h4 class="precio">$6.000</h4>
+                        <div class="texto_info">
+                                <p>Ramo de orquidea</p> 
+                            <p>$6.000</p>
                         </div>
                     </div>
                 </div>
                 <div class="ramo">
                     <div class="productos">        
                         <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
-                            <div class="productorosa">
-                                <h3 class="texto_info">
-                                    Ramo de orquidea
-                                </h3>
-                                <h4 class="precio">$6.000</h4>
+                            <div class="texto_info">
+                                    <p>Ramo de orquidea</p>
+                                <p>$6.000</p>
                             </div>
                     </div>
                 </div>
                 <div class="ramo">
                     <div class="productos">
                         <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Mancha" title="Orquidea Manchada" width="100" height="120" />
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de orquidea
-                            </h3>
-                            <h4 class="precio">$6.500</h4>
+                        <div class="texto_info">
+                                <p>Ramo de orquidea</p>
+                            <p>$6.500</p>
                         </div>
                     </div>
                 </div>
                 <div class="ramo">
                     <div class="productos">        
                         <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de Gualdas
-                            </h3>
-                            <h4 class="precio">$2.500</h4>
+                        <div class="texto_info">
+                                <p>Ramo de Gualdas</p>
+                            <p>$2.500</p>
                         </div>
                     </div>
                 </div>  
                 <div class="ramo">
                     <div class="productos">      
                         <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
-                        <div class="productorosa">
-                            <h3 class="texto_info">
-                                Ramo de Jazmines
-                            </h3>
-                            <h4 class="precio">$6.000</h4>
+                        <div class="texto_info">
+                                <p>Ramo de Jazmines</p>
+                            <p>$6.000</p>
                         </div>
                     </div>
                 </div>
