reorganizando las clases y editando el h1 y h2

--- a/categoria.html
+++ b/categoria.html
@@ -24,14 +24,10 @@
         </nav>
     </header>
 
-     <!--contenido de pagina-->
-     <section id="catalogos">
-        <div class="img_inicio">
-            <div id="titulo">
-                <h1>¡Personalizá el ramo de tus sueños!</h1>
-                <h2> Vea parte de nuestro catálogo:</h2>
-            </div>
-            <!--productos grid-->
+
+    <h1>¡Personalizá el ramo de tus sueños!</h1>
+    <h2> Vea parte de nuestro catálogo:</h2>
+
             <div class="img">
                 <div class="productos">
                     <img src="imagenes/rosaAzul1.png" title="Rosa azul" width="100" height="120">
@@ -54,77 +50,74 @@
                     <div class="productos">
                         <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
                     </div>
-                        <div class="texto_info">
-                            <p>Ramo de rosa</p>
-                            <p>$3.000</p>
-                        </div>
+                    <div class="texto_info">
+                        <p>Ramo de rosa</p>
+                        <p>$3.000</p>
+                    </div>
                 </div>
 
-                <div class="ramo">
+                <div class="img">
                     <div class="productos">
                         <img src="imagenes/tulipanAmarillo1.jpg" title="Tulipan amarillo" width="100" height="120" />
-                            <div class="texto_info">
-                                <p>Ramo de tulipanes</p>
-                            <p>$3.000</p>
-                        </div>
+                    </div>    
+                    <div class="texto_info">
+                        <p>Ramo de tulipanes</p>
+                        <p>$3.000</p>
                     </div>
                 </div>        
-                <div class="ramo">
+                <div class="img">
                     <div class="productos">
                         <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
-                        <div class="texto_info">
-                                <p>Ramo de tulipanes</p>
-                            <p>$3.000<p>
-                        </div>
+                    </div>
+                    <div class="texto_info">
+                        <p>Ramo de tulipanes</p>
+                        <p>$3.000<p>
                     </div>
                 </div>
-                <div class="ramo">
+                <div class="img">
                     <div class="productos">        
                         <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />
-                        <div class="texto_info">
-                                <p>Ramo de orquidea</p> 
-                            <p>$6.000</p>
-                        </div>
+                    </div>
+                    <div class="texto_info">
+                        <p>Ramo de orquidea</p> 
+                        <p>$6.000</p>
                     </div>
                 </div>
-                <div class="ramo">
+                <div class="img">
                     <div class="productos">        
                         <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
-                            <div class="texto_info">
-                                    <p>Ramo de orquidea</p>
-                                <p>$6.000</p>
-                            </div>
-                    </div>
+                    </div>    
+                        <div class="texto_info">
+                            <p>Ramo de orquidea</p>
+                           <p>$6.000</p>
+                        </div>
                 </div>
-                <div class="ramo">
+                <div class="img">
                     <div class="productos">
                         <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Mancha" title="Orquidea Manchada" width="100" height="120" />
+                    </div>
                         <div class="texto_info">
-                                <p>Ramo de orquidea</p>
+                            <p>Ramo de orquidea</p>
                             <p>$6.500</p>
                         </div>
-                    </div>
                 </div>
-                <div class="ramo">
+                <div class="img">
                     <div class="productos">        
                         <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
+                    </div>
                         <div class="texto_info">
-                                <p>Ramo de Gualdas</p>
+                            <p>Ramo de Gualdas</p>
                             <p>$2.500</p>
                         </div>
-                    </div>
                 </div>  
-                <div class="ramo">
+                <div class="img">
                     <div class="productos">      
                         <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
-                        <div class="texto_info">
-                                <p>Ramo de Jazmines</p>
-                            <p>$6.000</p>
-                        </div>
                     </div>
+                        <div class="texto_info">
+                            <p>Ramo de Jazmines</p>
+                            <p>$6.000</p>
+                       </div>
                 </div>
-            </div>
-        </div>
-  </section>
 </body>
 </html>
