--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <div class="logo">
-            <img src="imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
+            <img src="../imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
         </div>
-        <div class="encabezado">
+        <div class="titulo">
             <h1>Flores Encantadas</h1>
         </div>
         <nav>
