--- a/categoria.html
+++ b/categoria.html
@@ -30,7 +30,7 @@
 
             <div class="img">
                 <div class="productos">
-                    <img src="imagenes/rosaAzul1.png" title="Rosa azul" width="100" height="120">
+                    <img src="imagenes/rosaAzul1.png" title="Rosa azul" width="100" height="120" />
                 </div>
                 <div class="texto-info">
                     <p>Rosa azul</p>
@@ -39,7 +39,7 @@
             </div>   
             <div class="img">     
                 <div class="productos">
-                    <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120">
+                    <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120" />
                 </div>
                     <div class="texto-info">
                         <p>Ramo de rosa</p> 
@@ -48,7 +48,7 @@
             </div>   
                 <div class="img">
                     <div class="productos">
-                        <img src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
+                        <img src="imagenes/rosaRosa1.png" title="Rosa rosada" width="100" height="120"/>
                     </div>
                     <div class="texto_info">
                         <p>Ramo de rosa</p>
