quitando los alt de las imagenes

--- a/categoria.html
+++ b/categoria.html
@@ -67,7 +67,7 @@
                 </div>        
                 <div class="img">
                     <div class="productos">
-                        <img src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
+                        <img src="imagenes/tulipanNaranja1.jpg"  title="Tulipan naranja" width="100" height="120" />
                     </div>
                     <div class="texto_info">
                         <p>Ramo de tulipanes</p>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="img">
                     <div class="productos">        
-                        <img src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />
+                        <img src="imagenes/orquideaBlanca1.png" title="Orquidea blanca" width="100" height="120" />
                     </div>
                     <div class="texto_info">
                         <p>Ramo de orquidea</p> 
@@ -85,7 +85,7 @@
                 </div>
                 <div class="img">
                     <div class="productos">        
-                        <img src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
+                        <img src="imagenes/orquideaAzul1.png"  title="Orquidea azul" width="100" height="120" />
                     </div>    
                         <div class="texto_info">
                             <p>Ramo de orquidea</p>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="img">
                     <div class="productos">
-                        <img src="imagenes/orquideaManchas1.jpg" alt="orquidea_Mancha" title="Orquidea Manchada" width="100" height="120" />
+                        <img src="imagenes/orquideaManchas1.jpg"  title="Orquidea Manchada" width="100" height="120" />
                     </div>
                         <div class="texto_info">
                             <p>Ramo de orquidea</p>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="img">
                     <div class="productos">        
-                        <img src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
+                        <img src="imagenes/Gualda1.png"  title="Gualda" width="100" height="120" />
                     </div>
                         <div class="texto_info">
                             <p>Ramo de Gualdas</p>
@@ -112,7 +112,7 @@
                 </div>  
                 <div class="img">
                     <div class="productos">      
-                        <img src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
+                        <img src="imagenes/jazmin1.jpg"  title="Jazmin" width="100" height="120" />
                     </div>
                         <div class="texto_info">
                             <p>Ramo de Jazmines</p>
