encontrando equivocacion de tipeo en texto_info

--- a/categoria.html
+++ b/categoria.html
@@ -32,7 +32,7 @@
                 <div class="productos">
                     <img src="imagenes/rosaAzul1.png" title="Rosa azul" width="100" height="120" />
                 </div>
-                <div class="texto-info">
+                <div class="texto_info">
                     <p>Rosa azul</p>
                     <p>$2.000</p>
                 </div>
@@ -41,7 +41,7 @@
                 <div class="productos">
                     <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120" />
                 </div>
-                    <div class="texto-info">
+                    <div class="texto_info">
                         <p>Ramo de rosa</p> 
                         <p>$2.000</p>
                     </div>
