--- a/categoria.html
+++ b/categoria.html
@@ -39,7 +39,7 @@
             </div>   
             <div class="img">     
                 <div class="productos">
-                    <img src="imagenes/rosaRoja1.png" alt="rosa_Azul" title="Rosa rosa" width="100" height="120" />
+                    <img src="imagenes/rosaRoja1.png" title="Rosa rosa" width="100" height="120" />
                 </div>
                     <div class="texto_info">
                         <p>Ramo de rosa</p> 
