--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -10,10 +10,9 @@
 <body>
     <header>
         <div class="logo">
-            <img src="imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
+            <img src="../imagenes/logoflor.png.jpeg" alt="Logo flor" />
         </div>
         <header>
-
             <nav>
                 <ul>
                     <li><a href="Inicio">Inicio</a></li>
@@ -24,16 +23,17 @@
 
     </header>
 
-    <section id="cent_inicio">
+    <section class="caja_cent" id="cent_inicio" >
+        <div id="agranda">
         <div id="inicio">
             <h1>Haga su pedido</h1>
             <p>Le ofrecemos persolanizacion y variedad a nuestros clientes</p>
-            <p>Vea nuestro catalogo de flores</p>
-            <a href="../catalogo/catalogo.html">-----</a>
-        </div>
+            <p>Vea nuestras muestras de flores</p>
+            <a href="../catalogo/catalogo.html" id="linkCat">Catalogo</a>
+        </div></div>
     </section>
 
-    <section id="cent_flores">
+    <section class="caja_cent" id="cent_flores">
         <div id="flores">
             <h2>Puede elegir hasta 3 tipos de flores</h2>
             <div id="flor1">
@@ -153,7 +153,7 @@
         </div>
     </section>
 
-    <section id="cent_carta">
+    <section class="caja_cent" id="cent_carta">
         <div id="carta">
             <h2>Carta para acompañar su ramo</h2>
 
@@ -219,7 +219,7 @@
         </div>
     </section>
 
-    <section id="botonF">
+    <section class="caja_cent" id="botonF">
 			<input type="submit" name="enviar" value="enviar" />
 			<input type="reset" name="borrar" value="borrar" />
     </section>
