Definiendo placeholder en HTML

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -43,24 +43,25 @@
 
 
             <label for="email">Correo electrónico: </label>
-            <input type="text" name="email" id="email">
+            <input type="text" name="email" id="email" placeholder="Ingresa tu email">
 
 
             <label for="usuario">Elegir nombre de usuario: </label>
-            <input type="text" name="usuario" id="usuario">
+            <input type="text" name="usuario" id="usuario" placeholder="Nuevo nombre de usuario">
 
             <label for="contra">Nueva contraseña: </label>
-            <input type="password" name="contra" id="contra">
+            <input type="password" name="contra" id="contra" placeholder="Ingrese nueva contraseña">
 
             <label for="confirmar">Confirmar contraseña: </label>
             <input type="text" name="confirmar" id="confirmar">
 
-            <input type="checkbox" name="notificar" id="notificar">
             <label for="notificar">Recibir notificaciones</label>
+            <input type="checkbox" name="notificar" id="notificar">
 
 
-            <input type="checkbox" name="terminos" id="terminos">
             <label for="terminos">Acepto los términos y condiciones</label>
+            <input type="checkbox" name="terminos" id="terminos">
+
 
             <input type="submit" id="crear" value="Crear cuenta">
 
