definiendo clase DATOS para los label

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -34,26 +34,28 @@
 
         <form>
             <h2>Registrarme</h2>
-            <label for="nom">Nombre: </label>
-            <input type="text" name="nom" id="nom">
+            <div class="datos">
+                <label for="nom">Nombre: </label>
+                <input type="text" name="nom" id="nom">
 
 
-            <label for="ape">Apellido: </label>
-            <input type="text" name="ape" id="ape">
+                <label for="ape">Apellido: </label>
+                <input type="text" name="ape" id="ape">
 
 
-            <label for="email">Correo electrónico: </label>
-            <input type="text" name="email" id="email" placeholder="Ingresa tu email">
+                <label for="email">Correo electrónico: </label>
+                <input type="text" name="email" id="email" placeholder="Ingresa tu email">
 
 
-            <label for="usuario">Elegir nombre de usuario: </label>
-            <input type="text" name="usuario" id="usuario" placeholder="Nuevo nombre de usuario">
+                <label for="usuario">Elegir nombre de usuario: </label>
+                <input type="text" name="usuario" id="usuario" placeholder="Nuevo nombre de usuario">
 
-            <label for="contra">Nueva contraseña: </label>
-            <input type="password" name="contra" id="contra" placeholder="Ingrese nueva contraseña">
+                <label for="contra">Nueva contraseña: </label>
+                <input type="password" name="contra" id="contra" placeholder="Ingrese nueva contraseña">
 
-            <label for="confirmar">Confirmar contraseña: </label>
-            <input type="text" name="confirmar" id="confirmar">
+                <label for="confirmar">Confirmar contraseña: </label>
+                <input type="text" name="confirmar" id="confirmar">
+            </div>
 
             <label for="notificar">Recibir notificaciones</label>
             <input type="checkbox" name="notificar" id="notificar">
